plain soda leerzeichen entfernt

--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -92,7 +92,7 @@
             "naren_(katkısız_meyve_suları)",
             "naren_fruizy_(katkısız_meyve_suları)",
             "soda_types",
-            "plain_soda_",
+            "plain_soda",
             "lemon_soda",
             "ayran",
             "water_(glas_bottle)"
