--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -284,8 +284,8 @@
     "soda_types": {
         "name": "Soda Types"
     },
-    "plain_soda_": {
-        "name": "Plain Soda "
+    "plain_soda": {
+        "name": "Plain Soda"
     },
     "lemon_soda": {
         "name": "Lemon Soda"
