--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -284,7 +284,7 @@
     "soda_types": {
         "name": "Gazoz Çeşitleri"
     },
-    "plain_soda_": {
+    "plain_soda": {
         "name": "Sade Soda"
     },
     "lemon_soda": {
